# clipboard-typer

./: .gitignore  PLAN.md  README.md  clipboard-typer.service  clipboard-typer.spec  config.example.toml  pyproject.toml
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD  build.sh
scripts/: build_nuitka.bat  build_nuitka.sh
src/clipboard_typer/: __main__.py  app.py  clipboard.py  config.py  hotkey.py  platform_detect.py  settings_dialog.py  tray.py  typer.py
tests/: test_app.py  test_clipboard.py  test_config.py  test_hotkey.py  test_platform_detect.py  test_settings_dialog.py  test_tray.py  test_typer.py
